--- a/index.html
+++ b/index.html
@@ -3,21 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Supermercado</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-    .produto, .carrinho-item {
-      border: 1px solid #ccc;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 5px;
-    }
-    .produto button, .carrinho-item button {
-      margin-left: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
@@ -30,6 +16,10 @@
   <div id="carrinho"></div>
   <div id="divTotal"></div>
 
-  <script src="app.js"></script>
+  <div>
+    <a href="avaliacao.html"><h3>Avalie nossos produtos!!!</h3></a>
+  </div>
+
+  <script src="./js/app.js"></script>
 </body>
 </html>
