alteração de temas

--- a/avaliacao.html
+++ b/avaliacao.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./css/votacao.css">
 </head>
 <body>
+    <button id="toggle-theme">🌓 Alternar tema</button>
+
     
     <a href="index.html"><h3><- Voltar ao início</h3></a>
     
