--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+  <button id="toggle-theme">🌓 Alternar tema</button>
+
 
   <h1>🛒 Supermercado</h1>
 
