--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <button id="toggle-theme">🌓 Alternar tema</button>
+  <button id="pink-theme">Tema rosa</button>
 
 
   <h1>🛒 Supermercado</h1>
